# archivr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  auth.rs  clippy.toml  cmd.rs  config.rs  flake.nix  images.rs  job.rs  lib.rs  main.rs  template.rs
.github/workflows/: build.yml  sync.yml
src/: auth.rs  cmd.rs  config.rs  lib.rs  main.rs  state.rs  template.rs
