[package]
name = "archivr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.100"
camino = "1.2"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crabrave = "0.1"
directories = "6"
fs-err = { version = "3.2", features = ["tokio"] }
log = "0.4.29"
open = "5.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["full"] }
urlencoding = "2.1.3"

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
disallowed_types = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
