[package]
name = "archivr"
version = "0.4.0"
edition = "2024"
description = "A Tumblr backup tool"
license = "GPL-3.0"
repository = "https://github.com/ryanfaulhaber/archivr"
keywords = ["tumblr", "backup", "archive"]
categories = ["command-line-utilities"]

[[bin]]
name = "archivr"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1"
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crabrave = { version = "0.8", features = ["cookies"] }
directories = "6"
env_logger = "0.11"
fs-err = { version = "3.2", features = ["tokio"] }
log = "0.4"
minijinja = "2.14"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
url = "2"
urlencoding = "2"

[lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
disallowed_types = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
push-remote = "origin"
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"
publish = true
